First cut at Java 11 compliance